add sfx feature and context pangiation
